--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
-<link rel="canonical" href="https://example.com/">
+<title>Redirecting to https://sakura-share.awsm.workers.dev/</title>
+<meta http-equiv="refresh" content="0; URL=https://sakura-share.awsm.workers.dev/">
+<link rel="canonical" href="https://sakura-share.awsm.workers.dev/">
