--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://sakura-share.awsm.workers.dev/</title>
-<meta http-equiv="refresh" content="0; URL=https://sakura-share.awsm.workers.dev/">
-<link rel="canonical" href="https://sakura-share.awsm.workers.dev/">
+<title>Redirecting to https://awesome-multi-drive.ayd1n.workers.dev</title>
+<meta http-equiv="refresh" content="0; URL=https://awesome-multi-drive.ayd1n.workers.dev">
+<link rel="canonical" href="https://awesome-multi-drive.ayd1n.workers.dev">
